[gd_scene load_steps=26 format=3 uid="uid://ieri1l2pt0lw"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Void.gd" id="1_fwjbu"]
[ext_resource type="Script" path="res://Scripts/Players/Player 1.gd" id="2_4e03n"]
[ext_resource type="AudioStream" uid="uid://gap6g2yu8kx3" path="res://Sounds/25. Universal Collapse.mp3" id="2_d24qj"]
[ext_resource type="Script" path="res://Scripts/Players/Player 2.gd" id="3_ki4em"]
[ext_resource type="Texture2D" uid="uid://cnkg5na4bsn4h" path="res://Sprites/Clam.png" id="4_4jrcg"]
[ext_resource type="Script" path="res://Scripts/Players/Player 3.gd" id="4_j5vt3"]
[ext_resource type="Script" path="res://Scripts/Players/Player 4.gd" id="5_bbv76"]
[ext_resource type="Texture2D" uid="uid://b7jtl38wmyy0j" path="res://Sprites/ClamHood.png" id="6_f5sj4"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Nukespawner.gd" id="6_pgol6"]
[ext_resource type="PackedScene" uid="uid://cjyo8w1fk21e7" path="res://Scenes/nuke_scene.tscn" id="7_u7388"]
[ext_resource type="PackedScene" uid="uid://bghs6em6eqof8" path="res://Scenes/Sweeper.tscn" id="8_5cbcc"]
[ext_resource type="Script" path="res://Scripts/Blackout/Blackout Timer.gd" id="9_vv3bj"]
[ext_resource type="PackedScene" uid="uid://dswsedgoqefr7" path="res://Scenes/blackout.tscn" id="10_lrmh6"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P1slidelabel.gd" id="11_py5b1"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P2slidelabel.gd" id="12_043m4"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P3slidelabel.gd" id="13_6ptpc"]
[ext_resource type="PackedScene" uid="uid://dcv5hh4o4rswm" path="res://Scenes/Fog.tscn" id="14_oea51"]
[ext_resource type="Script" path="res://Scripts/UI/slidelabel/P4slidelabel.gd" id="14_tceu2"]
[ext_resource type="Script" path="res://Scripts/Gameplay/MapGrounds/AddGround.gd" id="15_xbgmn"]
[ext_resource type="PackedScene" uid="uid://d342vv4g7762h" path="res://Scenes/GroundLeft.tscn" id="16_1c585"]
[ext_resource type="PackedScene" uid="uid://crvy5gfiqpum2" path="res://Scenes/Ground.tscn" id="17_q7kd4"]
[ext_resource type="PackedScene" uid="uid://dsh7a5xw0h0uo" path="res://Scenes/GroundRight.tscn" id="18_t4g3v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v81yx"]
size = Vector2(6629, 193)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1nq8"]

[sub_resource type="TileSet" id="TileSet_muvba"]

[node name="Arena_01" type="Node2D"]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -324)

[node name="void" type="Area2D" parent="."]
script = ExtResource("1_fwjbu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2(-5, 102)
shape = SubResource("RectangleShape2D_v81yx")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("2_d24qj")

[node name="ColorRect" type="ColorRect" parent="void"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="Players" type="Node" parent="."]

[node name="Player 1" type="CharacterBody2D" parent="Players"]
position = Vector2(-50, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("2_4e03n")
metadata/Player = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 1"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_q1nq8")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Players/Player 1"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 1"]
visible = false
position = Vector2(-1.25, -0.625001)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("4_4jrcg")

[node name="Player 2" type="CharacterBody2D" parent="Players"]
position = Vector2(48, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("3_ki4em")
metadata/Player = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 2"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_q1nq8")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Players/Player 2"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(1, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 2"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("6_f5sj4")

[node name="Player 3" type="CharacterBody2D" parent="Players"]
position = Vector2(-152, -170)
scale = Vector2(0.8, 0.8)
script = ExtResource("4_j5vt3")
metadata/Player = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 3"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_q1nq8")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Players/Player 3"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.627451, 0, 0.717647, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 3"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("4_4jrcg")

[node name="Player 4" type="CharacterBody2D" parent="Players"]
position = Vector2(145, -171)
scale = Vector2(0.8, 0.8)
script = ExtResource("5_bbv76")
metadata/Player = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Players/Player 4"]
visible = false
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_q1nq8")
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Players/Player 4"]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
color = Color(0.741176, 0, 0.309804, 1)
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Players/Player 4"]
visible = false
position = Vector2(-1.25, 1.25)
scale = Vector2(1.76471, 1.33152)
texture = ExtResource("6_f5sj4")

[node name="Nuke Stuff" type="Node" parent="."]

[node name="Nuke Spawner" type="Node2D" parent="Nuke Stuff"]
script = ExtResource("6_pgol6")
nuke_scene = ExtResource("7_u7388")
sweeper_scene = ExtResource("8_5cbcc")

[node name="Timer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 15.0
autostart = true

[node name="Timer3" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 30.0
autostart = true

[node name="Timer4" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 45.0
autostart = true

[node name="Swimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 18.33
one_shot = true

[node name="SwimerTimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
one_shot = true
autostart = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_muvba")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(-1114115, 2, 0, -1179647, 65538, 0, -917503, 65538, 0, -655359, 65538, 0, -393215, 65538, 0, -327683, 2, 0, -589827, 2, 0, -1376259, 2, 0, -851971, 65538, 0, -1441791, 65538, 0)

[node name="Modifier Stuff" type="Node" parent="."]

[node name="Blackout Timer" type="Node2D" parent="Modifier Stuff"]
script = ExtResource("9_vv3bj")
blackout = ExtResource("10_lrmh6")
fog = ExtResource("14_oea51")

[node name="Timer" type="Timer" parent="Modifier Stuff/Blackout Timer"]
wait_time = 10.0
autostart = true

[node name="GUI\'s" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P1" type="RichTextLabel" parent="GUI\'s"]
layout_mode = 0
offset_left = -551.0
offset_top = -625.0
offset_right = -215.0
offset_bottom = -589.0
theme_override_font_sizes/normal_font_size = 26
text = "Player 1: 100% Control left"
fit_content = true
script = ExtResource("11_py5b1")

[node name="P2" type="RichTextLabel" parent="GUI\'s"]
layout_mode = 0
offset_left = 209.0
offset_top = -625.0
offset_right = 545.0
offset_bottom = -589.0
theme_override_font_sizes/normal_font_size = 26
text = "Player 2: 100% Control left"
fit_content = true
script = ExtResource("12_043m4")

[node name="P3" type="RichTextLabel" parent="GUI\'s"]
layout_mode = 0
offset_left = -551.0
offset_top = -51.0
offset_right = -215.0
offset_bottom = -15.0
theme_override_font_sizes/normal_font_size = 26
text = "Player 1: 100% Control left"
fit_content = true
script = ExtResource("13_6ptpc")

[node name="P4" type="RichTextLabel" parent="GUI\'s"]
layout_mode = 0
offset_left = 209.0
offset_top = -51.0
offset_right = 545.0
offset_bottom = -15.0
theme_override_font_sizes/normal_font_size = 26
text = "Player 2: 100% Control left"
fit_content = true
script = ExtResource("14_tceu2")

[node name="Grounds" type="Node" parent="."]
script = ExtResource("15_xbgmn")
GroundLeft = ExtResource("16_1c585")
Ground = ExtResource("17_q7kd4")
GroundRight = ExtResource("18_t4g3v")

[node name="SpawnPos\'" type="Node" parent="."]

[node name="SpawnPos1" type="Node2D" parent="SpawnPos\'"]
position = Vector2(-151, -174)

[node name="SpawnPos2" type="Node2D" parent="SpawnPos\'"]
position = Vector2(46, -172)

[node name="SpawnPos3" type="Node2D" parent="SpawnPos\'"]
position = Vector2(-48, -173)

[node name="SpawnPos4" type="Node2D" parent="SpawnPos\'"]
position = Vector2(147, -173)

[connection signal="body_entered" from="void" to="void" method="_on_body_entered"]
[connection signal="timeout" from="void/TextTimer" to="void" method="_on_text_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer" to="Nuke Stuff/Nuke Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer2" to="Nuke Stuff/Nuke Spawner" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer3" to="Nuke Stuff/Nuke Spawner" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer4" to="Nuke Stuff/Nuke Spawner" method="_on_timer_4_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Swimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/SwimerTimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timer_timeout"]
[connection signal="timeout" from="Modifier Stuff/Blackout Timer/Timer" to="Modifier Stuff/Blackout Timer" method="_on_timer_timeout"]
